--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
-  "name": "vue-awesome-swiper",
+  "name": "vue2-swiper",
   "description": "Swiper component for Vue",
-  "version": "4.1.0",
-  "keywords": [
-    "vue swiper",
-    "vue awesome swiper",
-    "vue carrousel",
-    "carrousel",
-    "swiper"
-  ],
+  "version": "1.0.0",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -32,32 +25,42 @@
     "format": "esm"
   },
   "files": [
-    "src",
     "dist"
   ],
   "types": "dist/index.d.ts",
   "scripts": {
     "cleanup": "rm -rf ./dist/*",
-    "build": "npm run cleanup && cross-env NODE_ENV=production abc build",
+  "build": "npm run cleanup && tsc",
     "lint": "abc lint --ext .ts,.vue src tests",
-    "test": "abc test",
+    "test": "jest",
     "test:watch": "abc test --watch -i",
     "rebirth": "npm run lint && npm test && npm run build",
-    "release": ". ./scripts/release.sh"
+    "release": ". ./scripts/release.sh",
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "swiper": "^5.2.0",
+    "swiper": "^12.0.0",
     "vue": "2.x"
   },
   "devDependencies": {
-    "@surmon-china/abc-factory": "^0.3.3",
-    "@types/swiper": "^5.2.1",
     "cross-env": "^6.0.3",
-    "swiper": "^5.2.0",
-    "typescript": "^3.7.5",
-    "vue": "^2.6.10"
+    "swiper": "^12.0.3",
+    "typescript": "^5.4.0",
+    "tslib": "^2.6.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+  "@vue/test-utils": "^1.3.6",
+  "vue-template-compiler": "2.7.16",
+  "@babel/core": "^7.25.0",
+  "@babel/preset-env": "^7.25.0",
+  "babel-jest": "^29.7.0",
+  "jest-environment-jsdom": "^29.7.0",
+    "@vue/vue2-jest": "^29.2.5",
+    "vue": "^2.7.16"
   },
   "engines": {
     "node": ">=8"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
